<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    tools:context=".EditorActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_product"
        android:textAlignment="center"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/name_of_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_product"

        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_per_one" />

    <EditText
        android:id="@+id/price_of_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_of_product"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details" />

    <EditText
        android:id="@+id/details_of_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/quantity"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/quantity_of_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:textAlignment="center"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus" />
    </LinearLayout>

    <ImageView
        android:id="@+id/edit_item_image_upload"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginLeft="@dimen/margin_button"
        android:src="@drawable/ic_action_name" />
    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/order" />


</LinearLayout>

